--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    
 
 <script
   src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
